fix swiper cards larger on smaller screens

--- a/src/styles/swiper.css
+++ b/src/styles/swiper.css
@@ -69,12 +69,12 @@ body {
 .mySwiper {
   height: 20%;
   box-sizing: border-box;
-  padding: 10px 0;
+  padding: 0 0;
 
 }
 
 .mySwiper .swiper-slide {
-  width: 25%;
+  width: 100%;
   height: 100%;
   /* opacity: 0.4;
   padding-left: 20px;
